--- a/login_buttons.html
+++ b/login_buttons.html
@@ -1,3 +1,14 @@
+<body>
+
+  <script type="text/x-template" id="login-buttons-template">
+      <!-- Must have only one root element in each template -->
+      <div id="login-buttons" class="login-buttons-dropdown-align-left">
+        <button type="button">Login Buttons</button>
+      </div>
+  </script>
+
+</body>
+
 <!-- These templates all need to be re-written for VueJS -->
 
 <template name="loginButtons">
