--- a/login_buttons.html
+++ b/login_buttons.html
@@ -7,7 +7,31 @@
       </div>
   </script>
 
-</body>
+  <script type="text/x-template" id="login-buttons-logged-out-template">
+    <button>Login</button>
+  </script>
+
+<!--
+{{#if configurationLoaded}}
+  {{#if dropdown}} {{! if more than one service configured, or password is configured}}
+    {{> _loginButtonsLoggedOutDropdown}}
+  {{else}}
+    {{#with singleService}} {{! at this point there must be only one configured services }}
+      <div class="login-buttons-with-only-one-button">
+        {{#if loggingIn}}
+          {{> _loginButtonsLoggingInSingleLoginButton}}
+        {{else}}
+          {{> _loginButtonsLoggedOutSingleLoginButton}}
+        {{/if}}
+      </div>
+    {{/with}}
+  {{/if}}
+{{/if}}
+-->
+
+  <script type="text/x-template" id="no-login-services-template">
+    <div class="no-services">No login services configured</div>
+  </script>
 
 <!-- These templates all need to be re-written for VueJS -->
 
@@ -96,3 +120,5 @@
     <div class="login-buttons-padding"></div>
   {{/unless}}
 </template>
+
+</body>
