--- a/login_buttons_dropdown.html
+++ b/login_buttons_dropdown.html
@@ -1,3 +1,4 @@
+<body>
 <!--           -->
 <!-- LOGGED IN -->
 <!--           -->
@@ -181,3 +182,4 @@
     Change password
   </div>
 </template>
+</body>
