--- a/login_buttons_single.html
+++ b/login_buttons_single.html
@@ -1,3 +1,4 @@
+<body>
 <template name="_loginButtonsLoggedOutSingleLoginButton">
   <div class="login-text-and-button">
     <div class="login-button single-login-button {{#unless configured}}configure-button{{/unless}}"
@@ -30,3 +31,4 @@
     <div class="login-button single-login-button" id="login-buttons-logout">Sign Out</div>
   </div>
 </template>
+</body>
