--- a/login_buttons.html
+++ b/login_buttons.html
@@ -2,72 +2,59 @@
 
   <script type="text/x-template" id="login-buttons-template">
       <!-- Must have only one root element in each template -->
-      <div id="login-buttons" class="login-buttons-dropdown-align-left">
-        <button type="button">Login Buttons</button>
+      <div id="login-buttons" class="login-buttons-dropdown-align-right">
+        <login-buttons-selector
+          :currentUser="currentUser"
+          :loggingInOrOut="loggingInOrOut"
+          :dropdownStatus="dropdownStatus"
+          :loginServices="loginServices"></login-buttons-selector>
       </div>
+  </script>
+
+  <script type="text/x-template" id="login-buttons-logged-in-single-template">
+    <div class="login-buttons-with-only-one-button">
+      <button>Single Button Logout</button>
+      _loginButtonsLoggedInSingleLogoutButton
+    </div>
+  </script>
+
+  <script type="text/x-template" id="login-buttons-with-only-one-button-template">
+    <div class="login-buttons-with-only-one-button">
+      <div v-if="loggingIn">
+        _loginButtonsLoggingInSingleLoginButton
+      </div>
+      <div v-else>
+        <login-buttons-logged-out-single-login-button></login-buttons-logged-out-single-login-button>
+      </div>
+    </div>
   </script>
 
   <script type="text/x-template" id="login-buttons-logged-out-template">
-    <button>Login</button>
+    <div v-if="configurationLoaded">
+      <login-buttons-logged-out-selector :dropdownStatus="dropdownStatus"></login-buttons-logged-out-selector>
+    </div>
   </script>
-
-<!--
-{{#if configurationLoaded}}
-  {{#if dropdown}} {{! if more than one service configured, or password is configured}}
-    {{> _loginButtonsLoggedOutDropdown}}
-  {{else}}
-    {{#with singleService}} {{! at this point there must be only one configured services }}
-      <div class="login-buttons-with-only-one-button">
-        {{#if loggingIn}}
-          {{> _loginButtonsLoggingInSingleLoginButton}}
-        {{else}}
-          {{> _loginButtonsLoggedOutSingleLoginButton}}
-        {{/if}}
-      </div>
-    {{/with}}
-  {{/if}}
-{{/if}}
--->
 
   <script type="text/x-template" id="no-login-services-template">
     <div class="no-services">No login services configured</div>
   </script>
 
-<!-- These templates all need to be re-written for VueJS -->
-
-<template name="loginButtons">
-  <div id="login-buttons" class="login-buttons-dropdown-align-{{align}}">
-    {{#if currentUser}}
-      {{#if loggingInOrOut}}
-        {{! We aren't actually logged in/out yet; we're just setting Meteor.userId
-            optimistically during an at-startup login-with-token. We expose this
-            state so other UIs can treat it specially, but we'll just treat it
-            as logged out. }}
-        {{#if dropdown}}
-          {{> _loginButtonsLoggingIn }}
-        {{else}}
-          <div class="login-buttons-with-only-one-button">
-            {{> _loginButtonsLoggingInSingleLoginButton }}
-          </div>
-        {{/if}}
-      {{else}}
-        {{> _loginButtonsLoggedIn}}
-      {{/if}}
-    {{else}}
-      {{> _loginButtonsLoggedOut}}
-    {{/if}}
-  </div>
-</template>
-
-<template name="_loginButtonsLoggedIn">
-  {{#if dropdown}}
-    {{> _loginButtonsLoggedInDropdown}}
-  {{else}}
-    <div class="login-buttons-with-only-one-button">
-      {{> _loginButtonsLoggedInSingleLogoutButton}}
+  <script type="text/x-template" id="login-buttons-logged-in-template">
+    <div>
+      <div v-if="dropdownStatus">
+        _loginButtonsLoggedInDropdown
+        <login-buttons-logged-in-dropdown></login-buttons-logged-in-dropdown>
+      </div>
+      <div v-else>
+        <div class="login-buttons-with-only-one-button">
+          _loginButtonsLoggedInSingleLogoutButton
+          <login-buttons-logged-in-single-logout></login-buttons-logged-in-single-logout>
+        </div>
+      </div>
     </div>
-  {{/if}}
-</template>
+  </script>
+
+<!-- These templates all need to be re-written for VueJS -->
 
 <template name="_loginButtonsLoggedOut">
   {{#if services}} {{! if at least one service is configured }}
