--- a/login_buttons_single.html
+++ b/login_buttons_single.html
@@ -1,34 +1,38 @@
 <body>
-<template name="_loginButtonsLoggedOutSingleLoginButton">
-  <div class="login-text-and-button">
-    <div class="login-button single-login-button {{#unless configured}}configure-button{{/unless}}"
-         id="login-buttons-{{name}}">
-      {{#if cannotConfigure}}
-        <span class="">{{capitalizedName}} not configured</span>
-      {{else}}
-        <div class="login-image" id="login-buttons-image-{{name}}"></div>
-        {{#if configured}}
-          <span class="text-besides-image sign-in-text-{{name}}">Sign in with {{capitalizedName}}</span>
-        {{else}}
-            <span class="text-besides-image configure-text-{{name}}">Configure {{capitalizedName}} Login</span>
-        {{/if}}
-      {{/if}}
-    </div>
-  </div>
-</template>
 
-<template name="_loginButtonsLoggingInSingleLoginButton">
-  <div class="login-text-and-button">
-    {{> _loginButtonsLoggingIn}}
-  </div>
-</template>
-
-<template name="_loginButtonsLoggedInSingleLogoutButton">
-  <div class="login-text-and-button">
-    <div class="login-display-name">
-      {{displayName}}
+  <script type="text/x-template" id="login-buttons-logged-out-single-login-button-template">
+    <div class="login-text-and-button">
+      <div class="login-button single-login-button"> <!--  {{#unless configured}}configure-button{{/unless}}"
+           id="login-buttons-{{name}} -->
+        <div v-if="cannotConfigure">
+          <span class="">{{capitalizedName}} not configured</span>
+        </div>
+        <div v-else>
+          <div class="login-image" id="login-buttons-image-"><!--{{name}}--></div>
+          <div v-if="configured">
+            <span class="text-besides-image sign-in-text-"><!--{{name}}-->Sign in with {{capitalizedName}}</span>
+          </div>
+          <div v-else>
+              <span class="text-besides-image configure-text-"><!--{{name}}-->Configure {{capitalizedName}} Login</span>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="login-button single-login-button" id="login-buttons-logout">Sign Out</div>
-  </div>
-</template>
+  </script>
+
+  <script type="text/x-template" id="login-buttons-logging-in-single-login-button-template">
+    <div class="login-text-and-button">
+       _loginButtonsLoggingIn
+    </div>
+  </script>
+
+  <script type="text/x-template" id="login-buttons-logged-in-single-logout-template">
+    <div class="login-text-and-button">
+      <div class="login-display-name">
+        {{displayName}}
+      </div>
+      <div class="login-button single-login-button" id="login-buttons-logout">Sign Out</div>
+    </div>
+  </script>
+
 </body>
