--- a/login_buttons_single.html
+++ b/login_buttons_single.html
@@ -21,7 +21,7 @@
 
   <script type="text/x-template" id="login-buttons-logged-out-single-login-button-template">
     <div class="login-text-and-button">
-      <div class="login-button single-login-button"> <!--  {{#unless configured}}configure-button{{/unless}}"
+      <div class="login-button single-login-button" @click="login"> <!--  {{#unless configured}}configure-button{{/unless}}"
            id="login-buttons-{{name}} -->
         <div v-if="cannotConfigure">
           <span class="">{{capitalizedName}} not configured</span>
