--- a/login_buttons.html
+++ b/login_buttons.html
@@ -55,6 +55,7 @@
 
   <script type="text/x-template" id="login-buttons-messages-template">
     <div>
+      Login buttons messages
       <div v-if="errorMessage">
         <div class="message error-message">{{errorMessage}}</div>
       </div>
